--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <style>
     body {
-      background-image: url('master/img/dspm.jpeg');
+      background-image: url('./img/dspm.jpg');
     }
   </style>
   <body>
