--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ from js import performance
 from js import Object
 import asyncio
 
+mouse = THREE.Vector2.new();
 renderer = THREE.WebGLRenderer.new({"antialias":True})
 renderer.setSize(1000, 1000)
 renderer.shadowMap.enabled = False
