--- a/index.html
+++ b/index.html
@@ -1,187 +1,127 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
+
 <head>
+  <base href="/">
+
   <meta charset="UTF-8">
-  <title>Raycaster</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./style.css">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="Flet application.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Flet">
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png" />
+
+  <!-- Flet specific -->
+  <meta name="flet-route-url-strategy" content="path">
+  <meta name="flet-web-pyodide" content="true">
+
+  <title>Flet</title>
+  <link rel="manifest" href="manifest.json">
+
+  <script>window.flutterWebRenderer="canvaskit";</script>
+
+  
+        <script>
+            var micropipIncludePre = false;
+            var pythonModuleName = "todo";
+        </script>
+        <script src="python.js"></script>
+        
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = '790847088';
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
+
 <body>
-<div class="container-fluid fixed-top header disable-selection">
-  <div class="row">
-    <div class="col"></div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col">
-        </div>
-      </div>
-    </div>
-    <div class="col"></div>
+  <div id="loading">
+    <style>
+      body {
+        inset: 0;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+      }
+
+      #loading {
+        align-items: center;
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        width: 100%;
+      }
+
+      #loading img {
+        animation: 1s ease-in-out 0s infinite alternate breathe;
+        opacity: .66;
+        transition: opacity .4s;
+      }
+
+      #loading.main_done img {
+        opacity: 1;
+      }
+
+      #loading.init_done img {
+        animation: .33s ease-in-out 0s 1 forwards zooooom;
+        opacity: .05;
+      }
+
+      @keyframes breathe {
+        from {
+          transform: scale(0.4);
+          opacity: 1.0;
+        }
+
+        to {
+          transform: scale(0.35);
+          opacity: .7;
+        }
+      }
+
+      @keyframes zooooom {
+        from {
+          transform: scale(0.4)
+        }
+
+        to {
+          transform: scale(10)
+        }
+      }
+    </style>
+    <img src="icons/loading-animation.png" alt="Loading..." />
   </div>
-</div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/89/three.min.js'></script>
-
-<script defer src="https://pyscript.net/latest/pyscript.js"></script>
-<link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-<py-script>
-from pyodide.ffi import create_proxy, to_js
-from js import window
-from js import Math
-from js import THREE
-from js import performance
-from js import Object
-import asyncio
-
-mouse = THREE.Vector2.new();
-renderer = THREE.WebGLRenderer.new({"antialias":True})
-renderer.setSize(1000, 1000)
-renderer.shadowMap.enabled = False
-renderer.shadowMap.type = THREE.PCFSoftShadowMap
-renderer.shadowMap.needsUpdate = True
-
-import js, pyodide
-def onMouseMove(event):
-  event.preventDefault();
-  mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-  mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-js.document.addEventListener('mousemove', pyodide.ffi.create_proxy(onMouseMove))
-
-camera = THREE.PerspectiveCamera.new( 35, window.innerWidth / window.innerHeight, 1, 500 )
-scene = THREE.Scene.new()
-cameraRange = 3
-
-camera.aspect = window.innerWidth / window.innerHeight
-camera.updateProjectionMatrix()
-renderer.setSize( window.innerWidth, window.innerHeight )
-
-setcolor = "#000000"
-
-scene.background = THREE.Color.new(setcolor)
-scene.fog = THREE.Fog.new(setcolor, 2.5, 3.5);
-
-sceneGroup = THREE.Object3D.new();
-particularGroup = THREE.Object3D.new();
-
-def mathRandom(num = 1):
-  setNumber = - Math.random() * num + Math.random() * num
-  return setNumber
-
-particularGroup =  THREE.Object3D.new();
-modularGroup =  THREE.Object3D.new();
-
-perms = {"flatShading":True, "color":"#111111", "transparent":False, "opacity":1, "wireframe":False}
-perms = Object.fromEntries(to_js(perms))
-
-particle_perms = {"color":"#FFFFFF", "side":THREE.DoubleSide}
-particle_perms = Object.fromEntries(to_js(particle_perms))
-
-def create_cubes(mathRandom, modularGroup):
-  i = 0
-  while i < 30:
-    geometry = THREE.IcosahedronGeometry.new();
-    material = THREE.MeshStandardMaterial.new(perms);
-    cube = THREE.Mesh.new(geometry, material);
-    cube.speedRotation = Math.random() * 0.1;
-    cube.positionX = mathRandom();
-    cube.positionY = mathRandom();
-    cube.positionZ = mathRandom();
-    cube.castShadow = True;
-    cube.receiveShadow = True;
-    newScaleValue = mathRandom(0.3);
-    cube.scale.set(newScaleValue,newScaleValue,newScaleValue);
-    cube.rotation.x = mathRandom(180 * Math.PI / 180);
-    cube.rotation.y = mathRandom(180 * Math.PI / 180);
-    cube.rotation.z = mathRandom(180 * Math.PI / 180);
-    cube.position.set(cube.positionX, cube.positionY, cube.positionZ);
-    modularGroup.add(cube);
-    i += 1
-
-create_cubes(mathRandom, modularGroup)
-
-
-def generateParticle(mathRandom, particularGroup, num, amp = 2):
-  gmaterial = THREE.MeshPhysicalMaterial.new(particle_perms);
-  gparticular = THREE.CircleGeometry.new(0.2,5);
-  i = 0
-  while i < num:
-    pscale = 0.001+Math.abs(mathRandom(0.03));
-    particular = THREE.Mesh.new(gparticular, gmaterial);
-    particular.position.set(mathRandom(amp),mathRandom(amp),mathRandom(amp));
-    particular.rotation.set(mathRandom(),mathRandom(),mathRandom());
-    particular.scale.set(pscale,pscale,pscale);
-    particular.speedValue = mathRandom(1);
-    particularGroup.add(particular);
-    i += 1
-
-generateParticle(mathRandom, particularGroup, 200, 2)
-
-sceneGroup.add(particularGroup);
-scene.add(modularGroup);
-scene.add(sceneGroup);
-
-camera.position.set(0, 0, cameraRange);
-cameraValue = False;
-
-ambientLight = THREE.AmbientLight.new(0xFFFFFF, 0.1);
-
-light = THREE.SpotLight.new(0xFFFFFF, 3);
-light.position.set(5, 5, 2);
-light.castShadow = True;
-light.shadow.mapSize.width = 10000;
-light.shadow.mapSize.height = light.shadow.mapSize.width;
-light.penumbra = 0.5;
-
-lightBack = THREE.PointLight.new(0x0FFFFF, 1);
-lightBack.position.set(0, -3, -1);
-
-scene.add(sceneGroup);
-scene.add(light);
-scene.add(lightBack);
-
-rectSize = 2
-intensity = 100
-rectLight = THREE.RectAreaLight.new( 0x0FFFFF, intensity,  rectSize, rectSize )
-rectLight.position.set( 0, 0, 1 )
-rectLight.lookAt( 0, 0, 0 )
-scene.add( rectLight )
-
-rectLightHelper = THREE.RectAreaLightHelper.new( rectLight );
-raycaster = THREE.Raycaster.new();
-uSpeed = 0.1
-
-time = 0.0003;
-camera.lookAt(scene.position)
-
-while True:
-  time = performance.now() * 0.0003;
-  i = 0
-  while i < particularGroup.children.length:
-    newObject = particularGroup.children[i];
-    newObject.rotation.x += newObject.speedValue/10;
-    newObject.rotation.y += newObject.speedValue/10;
-    newObject.rotation.z += newObject.speedValue/10;
-    i += 1
-
-  i = 0
-  while i < modularGroup.children.length:
-    newCubes = modularGroup.children[i];
-    newCubes.rotation.x += 0.008;
-    newCubes.rotation.y += 0.005;
-    newCubes.rotation.z += 0.003;
-
-    newCubes.position.x = Math.sin(time * newCubes.positionZ) * newCubes.positionY;
-    newCubes.position.y = Math.cos(time * newCubes.positionX) * newCubes.positionZ;
-    newCubes.position.z = Math.sin(time * newCubes.positionY) * newCubes.positionX;
-    i += 1
-
-  particularGroup.rotation.y += 0.005;
-
-  modularGroup.rotation.y -= ((mouse.x * 4) + modularGroup.rotation.y) * uSpeed;
-  modularGroup.rotation.x -= ((-mouse.y * 4) + modularGroup.rotation.x) * uSpeed;
-
-  renderer.render( scene, camera )
-  await asyncio.sleep(0.02)
-
-</py-script>
+  <script>
+    window.addEventListener('load', function () {
+      var loading = document.querySelector('#loading');
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        }
+      }).then(function (engineInitializer) {
+        loading.classList.add('main_done');
+        return engineInitializer.initializeEngine();
+      }).then(function (appRunner) {
+        loading.classList.add('init_done');
+        return appRunner.runApp();
+      }).then(function (app) {
+        // Wait a few milliseconds so users can see the "zoooom" animation
+        // before getting rid of the "loading" div.
+        window.setTimeout(function () {
+          loading.remove();
+        }, 200);
+      });
+    });
+  </script>
 </body>
+
 </html>
