--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
         <script>
             var micropipIncludePre = false;
-            var pythonModuleName = "todo";
+            var pythonModuleName = "chat";
         </script>
         <script src="python.js"></script>
         
